--- a/app/src/main/res/layout/fragment_add_update_recipe.xml
+++ b/app/src/main/res/layout/fragment_add_update_recipe.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AddRecipeFragment">
+    tools:context=".ui.fragments.AddRecipeFragment">
 
     <EditText
         android:id="@+id/etRecipeTitle"
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_marginVertical="8dp"
         android:layout_marginHorizontal="14dp"
-        android:hint="Enter recipe title"
+        android:hint="@string/enter_recipe_title"
         android:inputType="text"
         android:textColor="@color/black"
         android:textSize="14sp"
@@ -38,7 +38,7 @@
         android:layout_height="wrap_content"
         android:layout_marginVertical="8dp"
         android:layout_marginHorizontal="14dp"
-        android:hint="Enter recipe procedure"
+        android:hint="@string/enter_recipe_procedure"
         android:inputType="text"
         android:textColor="@color/black"
         android:textSize="12sp"
@@ -52,7 +52,7 @@
         android:layout_height="wrap_content"
         android:layout_marginVertical="8dp"
         android:layout_marginHorizontal="14dp"
-        android:hint="Enter recipe category"
+        android:hint="@string/enter_recipe_category"
         android:inputType="text"
         android:textColor="@color/black"
         android:textSize="14sp"
@@ -67,7 +67,7 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="14dp"
         android:layout_marginVertical="18dp"
-        android:text="ADD RECIPE"
+        android:text="@string/add_recipe"
         android:textColor="@color/white"
         android:textSize="14sp"
         android:textStyle="bold"
